[EJBBOOK-42] CH09-14 using JBossAS7, other examples broken